Ingress/Pod-definition.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "256m"
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: httpd
  labels:
    name: httpd
spec:
  containers:
  - name: httpd
    image: httpd
    resources:
      limits:
        memory: "128Mi"
        cpu: "256m"
    ports:
      - containerPort: 80
