Ingress/Service-definition.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: nginx

---
apiVersion: v1
kind: Service
metadata:
  name: httpd
  labels:
    name: httpd
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: httpd
